20130501 sound.c: don't try to enable right channel for Specdrum unless stereo
         mode is set (fixes bug #294) (thanks, mcleod_ideafix and Sergio)
         (Fred).
20130501 man/fuse.1: add %cfgnew step in Spectranet initialisation steps
         (thanks, smogit and Guesser) (Fred).
20130505 peripherals/{disk/opus.h,specdrum.h}: add missing subversion properties
         (Sergio).
20130505 machines/{spec128.h,specplus2.c},peripherals/{disk/opus.h,ide/divide.h,
         kempmouse.h,specdrum.h},settings-header.pl: remove and relocate some
         header inclusions (Sergio).
20130505 unittests/unittests.c: add missing header (Sergio).
20130505 peripherals/{ay.c,fuller.c,if1.c,if2.c,joystick.c,kempmouse.c,
         machines_periph.c,melodik.c,printer.c,scld.c,speccyboot.c,specdrum.c,
         ula.c},peripherals/disk/{beta.c,opus.c}, peripherals/ide/simpleide.c:
         complete some missing field initializers (Sergio).
20130505 peripherals/if1.c: put braces around empty body in ‘do’ statements
         (Sergio).
20130512 ui/win32/options.pl: refactor options dialogs to split *_init and
         *_done functions out of *_proc function (Sergio).
20130513 settings-header.pl,settings.pl: change settings_defaults(),
         settings_copy() and settings_copy_internal() to void functions (Fred).
20130513 ui/widget/{options.pl,roms.c}: change settings_copy() to void function
         on widget UIs (Sergio).
20130516 man/fuse.1: update date and version for 1.1 release.
20130516 ChangeLog: update date in main changelog.
20130517 periph.[c|h],perl/Fuse/Dialog.pm,ui/gtk/{binary.c,confirm.c,
         gtkinternals.h,gtkjoystick.c,gtkui.c,options.pl,pokemem.c,rollback.c,
         roms.c,stock.c},ui/options.dat,ui/win32/options.pl: display
         confirmation dialogue for reset due to peripheral changes (Sergio).
20130517 README: update date for 1.1 release.
20130518 ui/widget/options.pl: display confirmation dialogue for reset due to
         peripheral changes (Stuart).