@@ -1,7 +1,7 @@
 #!/usr/bin/perl -w
 
 # options.pl: generate options dialog boxes
-# Copyright (c) 2001-2008 Philip Kendall, Fredrick Meunier
+# Copyright (c) 2001-2013 Philip Kendall, Fredrick Meunier
 
 # $Id$
 
@@ -37,7 +37,7 @@ my %combo_default;
 my @dialogs = Fuse::Dialog::read( shift @ARGV );
 
 print Fuse::GPL( 'options.c: options dialog boxes',
-		 '2001-2004 Philip Kendall' ) . << "CODE";
+		 '2001-2013 Philip Kendall' ) . << "CODE";
 
 /* This file is autogenerated from options.dat by options.pl.
    Do not edit unless you know what you\'re doing! */
@@ -372,8 +372,8 @@ widget_options_finish( widget_finish_state finished )
     memset( &original_settings, 0, sizeof( settings_info ) );
     settings_copy( &original_settings, &settings_current );
 
+    /* Apply new options */
     settings_copy( &settings_current, &widget_options_settings );
-    /* Bring the peripherals list into sync with the new options */
 
     int needs_hard_reset = periph_postcheck();
 
@@ -386,6 +386,13 @@ widget_options_finish( widget_finish_state finished )
       else
         periph_posthook();
     }
+    else {
+      /* Bring the peripherals list into sync with the new options */
+      periph_posthook();
+    }
+
+    settings_free( &original_settings );
+
     /* make the needed UI changes */
     uidisplay_hotswap_gfx_mode();
   }
