@@ -4495,3 +4495,5 @@
 20130517 README: update date for 1.1 release.
 20130518 ui/widget/options.pl: display confirmation dialogue for reset due to
          peripheral changes (Stuart).
+20130518 ui/widget/options.pl: update peripherals list when a machine reset is
+         not needed (Sergio).
